apps/base/octave-webapi/octave-webapi-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: octave-webapi
  labels:
    app: octave-webapi
spec:
  replicas: 1
  selector:
    matchLabels:
      app: octave-webapi
  template:
    metadata:
      labels:
        app: octave-webapi
    spec:
      containers:
      - name: octave-webapi
        image: acrdev01global-hudngze7h7hcd6gw.azurecr.io/octave/octave-webapi-debug:latest
        ports:
          - containerPort: 5000
